Correction probleme sonar